Convert AMF packet to xml, or convert xml back to AMF packet.

--- a/doc/TODO.txt
+++ b/doc/TODO.txt
@@ -15,7 +15,7 @@ extractor (p3)
 HTTP Editor (finished)
 Cookie Manager (p1) (finished)
 AMF Encoder/Decoder (p1) (finished)
-AMF XML (p1)
+AMF XML (p1) (finished)
 
 Users (finished)
 Reporter (p1)
