Update todo list.

--- a/doc/TODO.txt
+++ b/doc/TODO.txt
@@ -65,5 +65,6 @@ Update unit test since the Scope has been removed from Script/Player (p3)
 
 redirect stdout/stderr to log file (p3)
 
+support creating empty page (p3)
 
 
