--- a/doc/TODO.txt
+++ b/doc/TODO.txt
@@ -7,10 +7,12 @@ Tree Editor
 Infotab (p2) (finised)
 extractor (p3)
 
+terminate playing
+
+Performance (p2)
 UI Unit Tests (p4)
 Packages (p4)
 Exception Handler (p4)
-Performance (p2)
 
 Builtin/Global Variables/Modules for plugin (p4)
 
@@ -21,7 +23,7 @@ threading util (p3)
 
 unicode support/i18n (p4)
 
-clean dead reference in repository (p3)
+clean dead reference in repository (p3) (finished)
 
 support GZip coder
 support composite coder
