Support terminating playing. Note that it only works when there is a request. So, if the special has only if, loop, block, and script, terminating won't work.

--- a/doc/TODO.txt
+++ b/doc/TODO.txt
@@ -7,7 +7,7 @@ Tree Editor
 Infotab (p2) (finised)
 extractor (p3)
 
-terminate playing
+terminate playing (finished)
 
 Performance (p2)
 UI Unit Tests (p4)
