Update todo list.

--- a/doc/TODO.txt
+++ b/doc/TODO.txt
@@ -51,5 +51,6 @@ Update unit test since the Scope has been removed from Script/Player (p3)
 
 redirect stdout/stderr to log file (p3)
 
+100 users, why 200 threads? (p3)
 
 
