--- a/doc/TODO.txt
+++ b/doc/TODO.txt
@@ -57,4 +57,6 @@ redirect stdout/stderr to log file (p3)
 
 Add more information (e.g. start time, end time, user count) to summary table in report db.
 
+add confirmation dialog when deleting node
+
 
