--- a/doc/FAQ.txt
+++ b/doc/FAQ.txt
@@ -5,4 +5,9 @@ Under HKEY_LOCAL_MACHINE\SYSTEM\CurrentControlSet\Services\Tcpip\Parameters, add
 DWORD value MaxUserPort = 0x00008000 (32768)
 DWORD value TcpTimedWaitDelay = 0x0000001e (30)
 
+* The proxy can't work with localhost
+
+Using your machine IP or machine name instead of "localhost" and "127.0.0.1".
+
+
 
