--- a/doc/TODO.txt
+++ b/doc/TODO.txt
@@ -61,5 +61,10 @@ Add Change URL
 
 bug fix: UnicodeDecodeError: 'gbk' codec can't decode bytes in position 223-224: illegal multibyte sequence
 
+
+
+
 play on the fly
 xml tree viewer
+Support Ctrl+C for CommandLine.py
+Performance is bad when loading and saving project
