Fix the flashing issue by using Freeze/Thaw. See commit r1108 (sorry I forgot to add log message for this commit because I was trying the stupid Emacs...)

--- a/doc/TODO.txt
+++ b/doc/TODO.txt
@@ -48,7 +48,7 @@ debug feature: reload modules (p4)
 search: from begin after reach end (p3)
 naming conventions (p2)
 
-Fixing flashing issues of DetailsPanel/InfoPanel (p3)
+Fixing flashing issues of DetailsPanel/InfoPanel (p3) (finished)
 Make InfoPanel editable (p3)
 
 Update unit test since the Scope has been removed from Script/Player (p3)
