--- a/doc/TODO.txt
+++ b/doc/TODO.txt
@@ -57,8 +57,6 @@ redirect stdout/stderr to log file (p3)
 
 100 users, why 200 threads? (p3)
 
-Add Change URL
-
 bug fix: UnicodeDecodeError: 'gbk' codec can't decode bytes in position 223-224: illegal multibyte sequence
 
 
@@ -66,3 +64,5 @@ bug fix: UnicodeDecodeError: 'gbk' codec can't decode bytes in position 223-224:
 
 xml tree viewer
 loading big report is slow
+don't expand all tree nodes when something changed
+
