Update todo list.

--- a/doc/TODO.txt
+++ b/doc/TODO.txt
@@ -61,3 +61,7 @@ the current dir for open project dialog and open report dialog should be differe
 
 add date/revision information to project/report files
 
+bug: error column in report is always empty?
+
+improve performance of parsing request
+
