--- a/doc/TODO.txt
+++ b/doc/TODO.txt
@@ -67,4 +67,5 @@ improve performance of parsing request (p2)
 
 adding request object in scope.
 
+bug: can't drag page a after page a in specal tree
 
