--- a/doc/TODO.txt
+++ b/doc/TODO.txt
@@ -46,7 +46,8 @@ bug fix: UnicodeDecodeError: 'gbk' codec can't decode bytes in position 223-224:
 
 
 
-xml tree viewer (p1)
+give test xpath panel to xml tree viewer (p1)
+
 loading big report is slow (p3)
 don't expand all tree nodes when something changed (p1)
 
