--- a/doc/TODO.txt
+++ b/doc/TODO.txt
@@ -46,9 +46,9 @@ bug fix: UnicodeDecodeError: 'gbk' codec can't decode bytes in position 223-224:
 
 
 
-give test xpath panel to xml tree viewer (p1)
 
 search text (highlight nodes or filter nodes) in tree (p1)
+highlight (red) background when filtring tree (p1)
 
 
 loading big report is slow (p3)
